--- a/.github/workflows/daily-sanitizers.yml
+++ b/.github/workflows/daily-sanitizers.yml
@@ -46,6 +46,7 @@ jobs:
 
       - name: Configure & Build
         run: |
+          apt install zstd
           mkdir -p $GITHUB_WORKSPACE/build
           cd $GITHUB_WORKSPACE/build
           cmake .. \
