--- a/.github/workflows/daily-sanitizers.yml
+++ b/.github/workflows/daily-sanitizers.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Configure & Build
         run: |
-          apt install zstd
+          apt install libzstd-dev
           mkdir -p $GITHUB_WORKSPACE/build
           cd $GITHUB_WORKSPACE/build
           cmake .. \
