--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,10 @@ jobs:
     strategy:
       matrix:
         # Test of these containers
-        container: ["ubuntu-dev:20", "alpine-dev:latest"]
-        build-type: [Debug, Release]
+        #container: ["ubuntu-dev:20", "alpine-dev:latest"]
+        container: ["alpine-dev:latest"]
+        build-type: [Release]
+          #build-type: [Debug, Release]
         compiler: [{ cxx: g++, c: gcc }]
         cxx_flags: ["-Werror"]
         include:
@@ -93,7 +95,6 @@ jobs:
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
         run: |
-          [[ ${{matrix.container }} = "alpine-dev:latest" ]] && with_san="ON" || with_san="OFF"
           cmake -B ${GITHUB_WORKSPACE}/build \
             -DCMAKE_BUILD_TYPE=${{matrix.build-type}} \
             -GNinja \
@@ -101,8 +102,6 @@ jobs:
             -DCMAKE_CXX_COMPILER="${{matrix.compiler.cxx}}" \
             -DCMAKE_CXX_COMPILER_LAUNCHER=sccache -DCMAKE_C_COMPILER_LAUNCHER=sccache \
             -DCMAKE_CXX_FLAGS="${{matrix.cxx_flags}}" \
-            -DWITH_ASAN=$with_san \
-            -DWITH_USAN=$with_san \
             -L
           cd ${GITHUB_WORKSPACE}/build && pwd
           du -hcs _deps/
