--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,7 +115,7 @@ jobs:
           ninja search_family_test
           df -h
           echo "-----------------------------"
-          ninja src/all
+          ninja dragonfly
 
       - name: PostFail
         if: failure()
@@ -123,37 +123,37 @@ jobs:
           echo "disk space is:"
           df -h
 
-      - name: C++ Unit Tests
-        run: |
-          cd ${GITHUB_WORKSPACE}/build
-          echo Run ctest -V -L DFLY
-          GLOG_alsologtostderr=1 GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 ctest -V -L DFLY
-
-          echo "Running tests with --force_epoll"
-
-          # Create a rule that automatically prints stacktrace upon segfault
-          cat > ./init.gdb <<EOF
-          catch signal SIGSEGV
-          command
-          bt
-          end
-          EOF
-
-          gdb -ix ./init.gdb --batch -ex r --args ./dragonfly_test --force_epoll
-          FLAGS_force_epoll=true GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 ctest -V -L DFLY
-
-          echo "Finished running tests with --force_epoll"
-
-          echo "Running tests with --cluster_mode=emulated"
-          FLAGS_cluster_mode=emulated ctest -V -L DFLY
-
-          echo "Running tests with both --cluster_mode=emulated & --lock_on_hashtags"
-          FLAGS_cluster_mode=emulated FLAGS_lock_on_hashtags=true ctest -V -L DFLY
-
-          ./dragonfly_test
-          ./multi_test --multi_exec_mode=1
-          ./multi_test --multi_exec_mode=3
-
+          #      - name: C++ Unit Tests
+          #        run: |
+          #          cd ${GITHUB_WORKSPACE}/build
+          #          echo Run ctest -V -L DFLY
+          #          GLOG_alsologtostderr=1 GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 ctest -V -L DFLY
+          #
+          #          echo "Running tests with --force_epoll"
+          #
+          #          # Create a rule that automatically prints stacktrace upon segfault
+          #          cat > ./init.gdb <<EOF
+          #          catch signal SIGSEGV
+          #          command
+          #          bt
+          #          end
+          #          EOF
+          #
+          #          gdb -ix ./init.gdb --batch -ex r --args ./dragonfly_test --force_epoll
+          #          FLAGS_force_epoll=true GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 ctest -V -L DFLY
+          #
+          #          echo "Finished running tests with --force_epoll"
+          #
+          #          echo "Running tests with --cluster_mode=emulated"
+          #          FLAGS_cluster_mode=emulated ctest -V -L DFLY
+          #
+          #          echo "Running tests with both --cluster_mode=emulated & --lock_on_hashtags"
+          #          FLAGS_cluster_mode=emulated FLAGS_lock_on_hashtags=true ctest -V -L DFLY
+          #
+          #          ./dragonfly_test
+          #          ./multi_test --multi_exec_mode=1
+          #          ./multi_test --multi_exec_mode=3
+          #
       - name: Upload unit logs on failure
         if: failure()
         uses: actions/upload-artifact@v4
