--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,10 +88,10 @@ jobs:
           touch /mnt/foo
           ls -la /mnt/foo
       - name: Run sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.4
+        uses: mozilla-actions/sccache-action@v0.0.5
 
       - name: Configure Cache Env
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
@@ -178,8 +178,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: regression_logs
-          path: /tmp/failed/*
-
+          path: |
+            /tmp/**/*
+            /tmp/*
 
   lint-test-chart:
     runs-on: ubuntu-latest
