--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: logs
-          path: /tmp/dragonfly.*
+          path: /tmp/failed/*
 
   lint-test-chart:
     runs-on: ubuntu-latest
