--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -156,6 +156,15 @@ jobs:
           command: |
             kubectl logs -n ${{ steps.setup.outputs.namespace }} dragonfly-sample-1
 
+      - name: Get kubectl logs
+        uses: nick-fields/retry@v3
+        if: always()
+        with:
+          timeout_minutes: 1
+          max_attempts: 3
+          command: |
+            kubectl describe dragonflies.dragonflydb.io -n ${{ steps.setup.outputs.namespace }} service/dragonfly-sample
+
       - name: Scale down to zero
         if: always()
         run: |
