--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -105,8 +105,20 @@ jobs:
         shell: bash
         run: |
           # Memtier benchmark run will fail at some point because old master shutdown on version upgrade
-          kubectl wait --for=condition=failed --timeout=120s -n ${{ steps.setup.outputs.namespace }} jobs/memtier-benchmark 2>/dev/null
+          while true; do
+            if kubectl wait --for=condition=failed --timeout=0 -n ${{ steps.setup.outputs.namespace }} jobs/memtier-benchmark 2>/dev/null; then
+              job_result=1
+              break
+            fi
+            sleep 3
+          done
+
+          #kubectl wait --for=condition=failed --timeout=120s -n ${{ steps.setup.outputs.namespace }} jobs/memtier-benchmark 2>/dev/null
           kubectl logs -n ${{ steps.setup.outputs.namespace }} -f jobs/memtier-benchmark
+          if [[ $job_result -nq 1 ]]; then
+            exit 1
+          fi
+
           kubectl delete -n ${{ steps.setup.outputs.namespace }} jobs/memtier-benchmark
 
       - name: Run Memtier Benchmark again
