--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,9 +179,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: regression_logs
-          path: |
-            /tmp/**/*
-            /tmp/*
+          path: /tmp/failed/*
 
   lint-test-chart:
     runs-on: ubuntu-latest
