--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -157,7 +157,7 @@ jobs:
           command: |
             kubectl logs -n ${{ steps.setup.outputs.namespace }} dragonfly-sample-1
 
-      - name: Get kubectl logs
+      - name: Describe dragonflydb object
         uses: nick-fields/retry@v3
         if: always()
         with:
