--- a/.github/actions/regression-tests/action.yml
+++ b/.github/actions/regression-tests/action.yml
@@ -48,6 +48,9 @@ runs:
 
         for run in {1..1000}; do
           timeout 50m pytest --durations=10 --color=yes --json-report --json-report-file=report.json dragonfly/replication_test.py::test_take_over_counters --log-cli-level=INFO || code=$?
+          if [[ $code -ne 0 ]]; then
+            exit 1
+          fi
         done
 
         # timeout returns 124 if we exceeded the timeout duration
