--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -51,9 +51,11 @@ jobs:
       - name: Autobuild cpp
         if: ${{matrix.language == 'cpp'}}
         run: |
-           echo "Run, Build Application using script"
-           chmod +x tests/codeql/build.sh
-           tests/codeql/build.sh
+         sudo apt install ninja-build libunwind-dev libboost-fiber-dev libssl-dev \
+         autoconf-archive libtool cmake g++ libzstd-dev bison libxml2-dev zlib1g-dev
+         ./helio/blaze.sh -release
+         cd build-opt && ninja dragonfly
+
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
